<resources>
    <string name="app_name">Livestream Fails</string>
    <string name="tv_filter_timeframe">Show clips from</string>
    <string name="filter_time_today">Today</string>
    <string name="filter_time_this_week">This week</string>
    <string name="filter_time_this_month">This month</string>
    <string name="filter_time_this_year">This year</string>
    <string name="filter_time_all_time">All time</string>
    <string name="filter_order_hot">Hot</string>
...
    <string name="tv_fail_subtitle">%1$s playing %2$s</string>
    <string name="tv_fail_points">%1$d points</string>
    <string name="tv_fail_subtitle_none">No game or streamer information</string>
    <string name="loading">Loading clips</string>
    <string name="loading_error">Failed to load clips</string>
    <string name="empty_list">No clips found</string>
    <string name="no_more_results">No more clips found</string>
    <string name="fab_scroll_to_top">Scroll to top</string>
    <string name="activity_details">Clip details</string>
    <string name="exo_controls_mute_description">Mute</string>
    <string name="exo_controls_unmute_description">Unmute</string>
    <string name="exo_position_duration_split">/</string>
    <string name="action_menu">Menu</string>
...
